force-app/main/default/objects/BankAccount__c/fields/accnumber__c.field-meta.xml
<CustomField>
    <fullName>accnumber__c</fullName>
    <displayFormat>BA#{00000000}</displayFormat>
    <label>Account Number</label>
    <type>AutoNumber</type>
</CustomField>