force-app/main/default/objects/BankAccount__c/fields/amount__c.field-meta.xml
<CustomField>
    <fullName>amount__c</fullName>
    <defaultValue>10000</defaultValue>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>