force-app/main/default/objects/BankAccount__c/fields/minAmount__c.field-meta.xml
<CustomField>
    <fullName>minAmount__c</fullName>
    <description>Shows the Highest deposit amount among all related deposits for this Bank Account.</description>
    <inlineHelpText>Maximum deposit value.</inlineHelpText>
    <label>Min Deposit Amount</label>
    <summarizedField>DepositAccount__c.amount__c</summarizedField>
    <summaryForeignKey>DepositAccount__c.bankId__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>