force-app/main/default/objects/BankAccount__c/fields/totalAmount__c.field-meta.xml
<CustomField>
    <fullName>totalAmount__c</fullName>
    <label>Deposit Amount</label>
    <summarizedField>DepositAccount__c.amount__c</summarizedField>
    <summaryForeignKey>DepositAccount__c.bankId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>