force-app/main/default/objects/BankAccount__c/fields/totalDeposits__c.field-meta.xml
<CustomField>
    <fullName>totalDeposits__c</fullName>
    <label>Deposits</label>
    <summaryForeignKey>DepositAccount__c.bankId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>