force-app/main/default/objects/BankAccount__c/fields/totalPremiumDeposits__c.field-meta.xml
<CustomField>
    <fullName>totalPremiumDeposits__c</fullName>
    <label>Premium Deposits</label>
    <summaryFilterItems>
        <field>DepositAccount__c.amount__c</field>
        <operation>greaterThan</operation>
        <value>500000</value>
    </summaryFilterItems>
    <summaryForeignKey>DepositAccount__c.bankId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>